IR receiver implemented

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
     "cmake.configureOnOpen": true,
-    "C_Cpp.default.compilerPath": "d:\\dev\\ARM 10 2021.10\\bin\\gccvar.bat"
+    "C_Cpp.default.compilerPath": "d:\\dev\\ARM 10 2021.10\\bin\\gccvar.bat",
+    "files.associations": {
+        "ir_receiver.pio.h": "c",
+        "ir_receiver.h": "c"
+    }
 }
